set buckminster.temp.root
git-svn-id: https://hudson.dev.java.net/svn/hudson/trunk/hudson/plugins@20081 71c3de6d-444a-0410-be80-ed276b4c234a